[testforms] removed overflow:hidden for testforms utilizing repeats [css] fixed readonly for Input type=boolean and Select appearance=full [js] added update betterFORM Dojo release

--- a/resource/src/main/resources/styles/betterform.css
+++ b/resource/src/main/resources/styles/betterform.css
@@ -609,11 +609,13 @@ alert + hints should always be aligned with the control.
 .xfRepeatIndex {
     background-color:#DFDFDF;
 }
-.bf .xsdBoolean .xfValue {
+.bf .xsdBoolean .xfValue,
+.bf .bfCheckBoxGroup .xfValue {
 	background-color:#FFFFFF;
 }
+.bf .bfCheckBoxGroup .dijitDisabled,
 .bf .xfReadOnly .dijitCheckBoxReadOnly {
-    background: #F3F3F3 !important;
+    background-color: #F3F3F3 !important;
 }
 
 .xfMinimalRepeat {
